--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="press-img" src="images/techcrunch.png" alt="tc-logo
+    <img class="press-img" src="images/techcrunch.png" alt="tc-logo">
     <img class=" press-img" src="images/tnw.png" alt="tnw-logo">
     <img class="press-img" src="images/bizinsider.png" alt="biz-insider-logo">
     <img class="press-img" src="images/mashable.png" alt="mashable-logo">
@@ -131,47 +131,57 @@
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
-    <div class="card-group">
-      <div class="card">
-        <div class="card-header">
-          <h3>Chihuahua</h3>
-        </div>
-        <div class="card-body">
-          <h2>Free</h2>
-          <p>5 Matches Per Day</p>
-          <p>10 Messages Per Day</p>
-          <p>Unlimited App Usage</p>
-          <button type="button">Sign Up</button>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="card-header">
-          <h3>Labrador</h3>
-        </div>
-        <div class="card-body">
-          <h2>$49 / mo</h2>
-          <p>Unlimited Matches</p>
-          <p>Unlimited Messages</p>
-          <p>Unlimited App Usage</p>
-          <button type="button">Sign Up</button>
+    <div class="row">
+      <div class="col-lg-4 col-md-6 col-sm-12 pricing-col">
+        <div class="card">
+          <div class="card-header">
+            <h3>Chihuahua</h3>
+          </div>
+          <div class="card-body">
+            <h2>Free</h2>
+            <p>5 Matches Per Day</p>
+            <p>10 Messages Per Day</p>
+            <p>Unlimited App Usage</p>
+            <div class="d-grid">
+              <button type="button" class="btn btn-lg btn-block btn-outline-dark">Sign Up</button>
+            </div>
+          </div>
         </div>
       </div>
 
-      <div class="card">
-        <div class="card-header">
-          <h3>Mastiff</h3>
-        </div>
-        <div class="card-body">
-          <h2>$99 / mo</h2>
-          <p>Pirority Listing</p>
-          <p>Unlimited Matches</p>
-          <p>Unlimited Messages</p>
-          <p>Unlimited App Usage</p>
-          <button type="button">Sign Up</button>
+      <div class="col-lg-4 col-md-6 col-sm-12 pricing-col">
+        <div class="card">
+          <div class="card-header">
+            <h3>Labrador</h3>
+          </div>
+          <div class="card-body">
+            <h2>$49 / mo</h2>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <div class="d-grid">
+              <button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
+      <div class="col-lg-4 col-md-12 col-sm-12 pricing-col">
+        <div class="card">
+          <div class="card-header">
+            <h3>Mastiff</h3>
+          </div>
+          <div class="card-body">
+            <h2>$99 / mo</h2>
+            <p>Pirority Listing</p>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <div class="d-grid">
+              <button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button>
+            </div>
+          </div>
+        </div>
+      </div>
   </section>
 
 
